# zsh-git-prompt

./: .gitignore  .pylintrc  .travis.yml  Makefile  README.md  README.rst  build.sh  chpwd_update_git_vars.sh  client.py  config-example.zsh  git-prompt.cabal  gitstatus.py  parsegit.py  precmd_update_git_vars.sh  preexec_update_git_vars.sh  prompt_git_info  prompt_git_info.sh  server.py  stack.yaml  test_gitstatus.py  tox.ini  update_current_git_vars.sh  zsh-git-prompt.plugin.zsh  zshrc.sh
functions/: preexec_update_git_vars  prompt_git_info  update_current_git_vars.sh
haskell/app/: Main.hs
haskell/src/: BranchParse.hs
haskell/test/: TestFunctional.hs
python/: gitstatus.py
rust/: Cargo.toml
rust/src/: main.rs
src/: BranchParse.hs  Main.hs  StatusParse.hs  TestBranchParse.hs  TestFunctional.hs  Utils.hs  git-prompt.cabal  stack.yaml
src/.bin/: README
src/app/: Main.hs
src/src/: BranchParse.hs  Utils.hs
src/test/: TestBranchParse.hs  TestFunctional.hs
